# https-github.com-boo396-MLP-BaseNbuild

./: .gitignore  Dockerfile  README.md  docker-compose.arm.yml  pyproject.toml
configs/: config.arm.yaml
scripts/: benchmark.sh  bootstrap_gb10.sh  check_native_stack.sh  check_reasoning_endpoints.sh  export_engine.sh  post_reimage_smoke.sh  provision_gb10_native.sh  reformat_cleanup.sh  reimage_build.sh  run_dev.sh  run_mock_trtllm.sh  run_phi4_reasoning_endpoints.sh  run_phi4_reasoning_endpoints_docker.sh  run_workers_dev.sh  smoke_fallback_e2e.sh  stop_phi4_reasoning_endpoints_docker.sh
src/mlp_basenbuild/: __init__.py  benchmark.py  config.py  dispatch.py  expert_worker.py  export_engine.py  mock_trtllm_server.py  models.py  router.py  server.py  trt_native.py
src/mlp_basenbuild/experts/: __init__.py  phi4_multimodal_onnx.py  trtllm_deepthink.py
static/: app.js  index.html  styles.css
